[gd_scene load_steps=7 format=2]

[ext_resource path="res://Network/Menu.gd" type="Script" id=1]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -618.0
margin_top = 328.0
margin_right = -412.0
margin_bottom = 395.0
custom_fonts/font = SubResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -343.0
margin_top = 328.0
margin_right = -144.0
margin_bottom = 395.0
custom_fonts/font = SubResource( 2 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nickname" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -489.449
margin_top = 83.0769
margin_right = -357.449
margin_bottom = 142.077
custom_fonts/font = SubResource( 4 )
text = "Nickname:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NickEdit" type="TextEdit" parent="Nickname"]
anchor_top = 0.00847458
anchor_bottom = 0.00847458
margin_left = 143.195
margin_top = 0.716415
margin_right = 342.194
margin_bottom = 31.7164
custom_fonts/font = SubResource( 5 )
text = "Joe Mama"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -488.0
margin_top = 220.0
margin_right = -358.0
margin_bottom = 279.0
custom_fonts/font = SubResource( 4 )
text = "IP adress:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPEdit" type="TextEdit" parent="IP"]
anchor_top = 0.00847458
anchor_bottom = 0.00847458
margin_left = 146.616
margin_top = 0.716415
margin_right = 345.616
margin_bottom = 31.7164
custom_fonts/font = SubResource( 5 )
text = "25.84.229.106"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -423.968
margin_top = 265.227
margin_right = -293.968
margin_bottom = 324.227
custom_fonts/font = SubResource( 4 )
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortEdt" type="TextEdit" parent="Port"]
anchor_top = 0.00847458
anchor_bottom = 0.00847458
margin_left = 81.4595
margin_top = 0.716415
margin_right = 280.459
margin_bottom = 31.7164
custom_fonts/font = SubResource( 5 )
text = "6969"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Host" to="." method="_on_Host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_Join_button_down"]
